feat: update various features for improved functionality and upgrade to 26.2